--- a/index.html
+++ b/index.html
@@ -3,17 +3,31 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Start to Finish</title>
     <link rel="stylesheet" href="screen.css">
+    <link href="https://fonts.googleapis.com" rel="stylesheet">
   </head>
+ 
   <body>
-    <h1>Home</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
+    <div id="header">
+     <h1>Thomas Manning</h1>
+   </div>
+    <main>
+     <p id="tagline">
+        Thomas Manning is a UX Designer with a passion for health systems and event organization software.
+      </p>
+    <div id="main-area">  
+      <img src="me.jpeg" alt="A photo of Thomas Manning in front of a blank background" id="portrait">
+      <div id="content">
+        <h2>About Thomas</h2>
+        <p id="body-text">
+        Graduating from MSU ComArtSci in 2022, Thomas Manning has worked in IT Infrastructure since. 
+        With a passion for designing for health systems and event organization software, Thomas plans to expand their skill set through the coursework in the UXMS program. <br> <br>
+        With a background in front end web development, Thomas feels comfortable working on projects of many different sizes.   
+      </p>
+      </div>
+    </div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
